Finalizada seccion equipo

--- a/html/index.html
+++ b/html/index.html
@@ -72,34 +72,39 @@
 			</div>
 
 			<div class="row">
-				<div class="col-xs-12 col-sm-4 ">
+				<div class="col-xs-12 col-sm-4 text-center">
 					<figure>
-						<img class="img-responsive"src="images/equipo/imagen_tatuador1.jpg" alt="">
+						<img class="img-responsive" src="images/equipo/imagen_tatuador1.jpg" alt="">
 					</figure>
-					<h3>NATALY</h3>
-					<h4>Tatuador</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+					<div class="container1">
+						<h3>NATALi</h3>
+						<h4>Tatoo designer</h4>
+						<p>El estilo de tatuaje en realismo es un técnica que exige de gran precisión y detalle, un marcado contraste entre luces y sombras, una mímesis de nuestro mundo.</p>
+					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 ">
+
+				<div class="col-xs-12 col-sm-4 text-center">
 					<figure>
 						<img class="img-responsive" src="images/equipo/imagen_tatuador2.jpg" alt="">
 					</figure>
-					<h3>JUAN</h3>
-					<h4>Tatuador</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+					<div class="container1">
+						<h3>HILDE</h3>
+						<h4>Tatoo designer</h4>
+						<p>Hildemar Hernandez es nuestro artista invitado de Venezuela, entre sus estilos podes encontrar desde el new scholl, trash polka hasta watercolor una mezcla de diseños contemporáneos al servicio de nuestro clientes</p>
+					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 ">
+
+				<div class="col-xs-12 col-sm-4 text-center ">
 					<figure>
 						<img class="img-responsive" src="images/equipo/imagen_tatuador3.jpg" alt="">
 					</figure>
-					<h3>SIMON</h3>
-					<h4>Tatuador</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+					<div class="container1">
+						<h3>ALEX</h3>
+						<h4>Tatoo designer</h4>
+						<p>En THE LUCKY ONES contamos con nuestro artista invitado de Brasil, Alex Black, especialista en el arte del tatuaje maorí y puntillismo, un profesional que estará dispuesto a escucharte y acompañarte en el proceso de creacion de tu idea.</p>
+					</div>
 				</div>
 			</div>
-
-
-
 		</div>
 	</div>
 
