--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 	</div>
-	</nav>
+
 
 	<!-- BANNER -->
 	<div id="banner">
@@ -66,7 +66,7 @@
 	<div id="equipo">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12 text-center">
+				<div class="col-xs-12 text-center">
 					<h2>EQUIPO</h2>
 				</div>
 			</div>
@@ -108,7 +108,6 @@
 		</div>
 	</div>
 
-	</div>
 
 
 
