--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
 					</figure>
 					<div class="container1">
 						<h3>NATALi</h3>
-						<h4>Tatoo designer</h4>
+						<h4>Tattoo designer</h4>
 						<p>El estilo de tatuaje en realismo es un técnica que exige de gran precisión y detalle, un marcado contraste entre luces y sombras, una mímesis de nuestro mundo.</p>
 					</div>
 				</div>
@@ -89,7 +89,7 @@
 					</figure>
 					<div class="container1">
 						<h3>HILDE</h3>
-						<h4>Tatoo designer</h4>
+						<h4>Tattoo designer</h4>
 						<p>Hildemar Hernandez es nuestro artista invitado de Venezuela, entre sus estilos podes encontrar desde el new scholl, trash polka hasta watercolor una mezcla de diseños contemporáneos al servicio de nuestro clientes</p>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 					</figure>
 					<div class="container1">
 						<h3>ALEX</h3>
-						<h4>Tatoo designer</h4>
+						<h4>Tattoo designer</h4>
 						<p>En THE LUCKY ONES contamos con nuestro artista invitado de Brasil, Alex Black, especialista en el arte del tatuaje maorí y puntillismo, un profesional que estará dispuesto a escucharte y acompañarte en el proceso de creacion de tu idea.</p>
 					</div>
 				</div>
@@ -110,16 +110,269 @@
 
 
 
+	<!-- SERVICIOS -->
+	<div id="que-hacemos">
+		<div id="carousel-example-generic2" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="images/servicios/imagen_tatuajes.jpg" alt="tatuajes">
+					<div class="carousel-caption">
+						<div class="container">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
+									<h3>QUE HACEMOS</h3>
+									<h2>TATUAJES EXCLUSIVOS</h2>
+									<div>
+										<button type="Enviar"><a href="#contacto" class="page-scroll">PEDIR PRESUPUESTO</a></button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<img src="images/servicios/imagen_diseños.jpg" alt="diseños">
+					<div class="carousel-caption">
+						<div class="container">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
+									<h3>QUE HACEMOS</h3>
+									<h2>DISEÑOS EXCLUSIVOS</h2>
+									<div>
+										<button type="Enviar"><a href="#contacto" class="page-scroll">PEDIR PRESUPUESTO</a></button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<img src="images/servicios/imagen_piercing.jpg" alt="diseños">
+					<div class="carousel-caption">
+						<div class="container">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
+									<h3>QUE HACEMOS</h3>
+									<h2>PIERCING LOCOS</h2>
+									<div>
+										<button type="Enviar"><a href="#contacto" class="page-scroll">PEDIR PRESUPUESTO</a></button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic2" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic2" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
+
+	<!-- PORTFOLIO -->
+	<div id="portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<h2>PORTFOLIO</h2>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio1.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio2.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center ">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio3.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio4.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio5.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center ">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio6.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio7.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio8.jpg" alt="">
+					</figure>
+				</div>
+
+				<div class="col-xs-12 col-sm-4 text-center ">
+					<figure>
+						<img class="img-responsive" src="images/portfolio/portfolio9.jpg" alt="">
+					</figure>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- CELEBRITIES -->
+	<div id="celebrities">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<h2>CELEBRITIES</h2>
+				</div>
+			</div>
+		</div>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="images/celebrities/celebrities1.jpg" alt="tatuajes">
+					<div class="carousel-caption">
+
+					</div>
+				</div>
+				<div class="item">
+					<img src="images/celebrities/celebrities2.jpg" alt="diseños">
+					<div class="carousel-caption">
+
+					</div>
+				</div>
+				<div class="item">
+					<img src="images/celebrities/celebrities3.jpg" alt="diseños">
+					<div class="carousel-caption">
+
+					</div>
+				</div>
+			</div>
+
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
+
+	<!-- CONTACTO -->
+	<div id="contacto">
+		<div class="row">
+			<div class="col-sm-12 text-center">
+				<h2>CONTACTO</h2>
+			</div>
+		</div>
+		<div class="row container-contacto">
+			<div class="col-xs-12 col-sm-6">
+				<div class="contacto-form">
+					<h3>CONTANOS QUE TE QUERES HACER Y TE LO PRESUPUESTAMOS</h3>
+					<form class="form">
+						<div class="form-group">
+							<label class="col-xs-12 col-sm-6"></label>
+							<input type="text" class="form-control" placeholder="NOMBRE & APELLIDO">
+						</div>
+						<div class="form-group">
+							<label class="col-xs-12 col-sm-6"></label>
+							<input type="eMail" class="form-control" placeholder="EMAIL">
+						</div>
+						<div class="form-group">
+							<label class="col-xs-12 col-sm-6"></label>
+							<input type="tel" class="form-control" placeholder="TELÉFONO / CELULAR">
+						</div>
+						<div class="form-group">
+							<label class="col-xs-12 col-sm-6"></label>
+							<input type="text" class="form-control" placeholder="QUE TE QUERES HACER?">
+						</div>
+						<button type="submit" class="btn btn-default">ENVIAR</button>
+					</form>
+					<h3>BOND STREET</h3>
+					<div class="direccion">
+						<p><i class="ion-location" aria-hidden="true"></i> AV. SANTA FE 1670, LOCAL 7, CAPITAL FEDERAL.</p>
+						<p><i class="ion-ios-telephone" aria-hidden="true"></i> 4813 4509 / 815 7032</p>
+						<p><i class="ion-ios-clock" aria-hidden="true"></i> LUNES A SÁBADOS DE 11 A 20 HS.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-xs-12 col-sm-6 mapa">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3322055428293!2d-58.39352168512324!3d-34.595760180461596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabe9001e3e5%3A0x216523eb0c8532dc!2sAv.+Santa+Fe+1670%2C+C1060ABP+CABA!5e0!3m2!1ses-419!2sar!4v1468881201810"
+								width="100%" height="790px" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+		</div>
+
+		<!-- FOOTER -->
+
+		<footer id="footer">
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<img alt="The Lucky Ones" src="images/logo_tattoo.jpg">
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<i class="ion-social-facebook"><a href="#"></a></i>
+					<i class="ion-social-instagram-outline"><a href="#"></a></i>
+				</div>
+			</div>
+		</footer>
 
 
-	<!-- librería-jQuery -->
-	<script src="js/jquery-1.12.3.min.js"></script>
-	<!-- js-de-bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Animate-Scroll -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<!-- Custom-Scripts -->
-	<script src="js/my-scripts.js"></script>
+
+		<!-- librería-jQuery -->
+		<script src="js/jquery-1.12.3.min.js"></script>
+		<!-- js-de-bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Animate-Scroll -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+		<!-- Custom-Scripts -->
+		<script src="js/my-scripts.js"></script>
 </body>
 
 </html>
