Terminado los MEDIA-QUERIES de fla e imagenes

--- a/html/index.html
+++ b/html/index.html
@@ -185,6 +185,8 @@
 		</div>
 	</div>
 
+
+
 	<!-- PORTFOLIO -->
 	<div id="portfolio">
 		<div class="container">
@@ -194,12 +196,14 @@
 				</div>
 			</div>
 
+
 			<div class="row">
 				<div class="col-xs-12 col-sm-4 text-center">
 					<figure>
 						<img class="img-responsive" src="images/portfolio/portfolio1.jpg" alt="">
 					</figure>
 				</div>
+
 
 				<div class="col-xs-12 col-sm-4 text-center">
 					<figure>
@@ -251,6 +255,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<!-- CELEBRITIES -->
 	<div id="celebrities">
@@ -352,13 +357,15 @@
 		<!-- FOOTER -->
 
 		<footer id="footer">
-			<div class="row">
-				<div class="col-xs-12 col-md-6">
-					<img alt="The Lucky Ones" src="images/logo_tattoo.jpg">
-				</div>
-				<div class="col-xs-12 col-md-6">
-					<i class="ion-social-facebook"><a href="#"></a></i>
-					<i class="ion-social-instagram-outline"><a href="#"></a></i>
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-2">
+						<img alt="The Lucky Ones" src="images/logo_tattoo.jpg">
+					</div>
+					<div class="col-xs-12 col-sm-3 col-sm-offset-7">
+						<i class="ion-social-facebook"><a href="#"></a></i>
+						<i class="ion-social-instagram-outline"><a href="#"></a></i>
+					</div>
 				</div>
 			</div>
 		</footer>
