--- a/html/index.html
+++ b/html/index.html
@@ -196,62 +196,179 @@
 				</div>
 			</div>
 
-
 			<div class="row">
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio1.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Natali" data-caption="Tatto Natali" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic1"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio1.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
-
-
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio2.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Hide" data-caption="Tatto Hide" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic2"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio2.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
-
-				<div class="col-xs-12 col-sm-4 text-center ">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio3.jpg" alt="">
-					</figure>
-				</div>
-
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio4.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Alex" data-caption="Tatto Alex" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic3"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio3.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
-
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio5.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Natali" data-caption="Tatto Natali" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic4"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio4.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
-
-				<div class="col-xs-12 col-sm-4 text-center ">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio6.jpg" alt="">
-					</figure>
-				</div>
-
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio7.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Hide" data-caption="Tatto Hide" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic5"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio5.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
-
 				<div class="col-xs-12 col-sm-4 text-center">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio8.jpg" alt="">
-					</figure>
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Alex" data-caption="Tatto Alex" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic6"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio6.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
 				</div>
+				<div class="col-xs-12 col-sm-4 text-center">
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Natali" data-caption="Tatto Natali" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic7"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio7.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
+				</div>
+				<div class="col-xs-12 col-sm-4 text-center">
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Hide" data-caption="Tatto Hide" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic8"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio8.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
+				</div>
+				<div class="col-xs-12 col-sm-4 text-center">
+           			<a class="thumbnail" href="#" data-toggle="modal" data-title="Tattoo Alex" data-caption="Tatto Alex" data-image="http://upload.wikimedia.org/wikipedia/commons/7/78/1997_Fiat_Panda.JPG" data-target="#pic9"> 
+                		<img class="img-responsive" src="images/portfolio/portfolio9.jpg" alt="Another alt text">
+                		<i class="ion-arrow-expand"></i>
+            		</a>
+				</div>
+			</div>
 
-				<div class="col-xs-12 col-sm-4 text-center ">
-					<figure>
-						<img class="img-responsive" src="images/portfolio/portfolio9.jpg" alt="">
-					</figure>
-				</div>
+			<div class="modal fade" id="pic1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO NATALI </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande1.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO HIDE </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande2.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO ALEX </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande3.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO NATALI </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande4.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO HIDE </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande5.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO ALEX </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande6.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO NATALI </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande7.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO HIDE </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande8.jpg">
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="modal fade" id="pic9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			                <h4 class="modal-title" id="image-gallery-title"> TATTOO ALEX </h4>
+			            </div>
+			            <div class="modal-body">
+			                <img id="image-gallery-image" class="img-responsive" src="images/portfolio/portoliogrande9.jpg">
+			            </div>
+			        </div>
+			    </div>
 			</div>
 		</div>
 	</div>
@@ -279,21 +396,12 @@
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
 					<img src="images/celebrities/celebrities1.jpg" alt="tatuajes">
-					<div class="carousel-caption">
-
-					</div>
 				</div>
 				<div class="item">
 					<img src="images/celebrities/celebrities2.jpg" alt="diseños">
-					<div class="carousel-caption">
-
-					</div>
 				</div>
 				<div class="item">
 					<img src="images/celebrities/celebrities3.jpg" alt="diseños">
-					<div class="carousel-caption">
-
-					</div>
 				</div>
 			</div>
 
@@ -311,49 +419,52 @@
 
 	<!-- CONTACTO -->
 	<div id="contacto">
-		<div class="row">
-			<div class="col-sm-12 text-center">
-				<h2>CONTACTO</h2>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<h2>CONTACTO</h2>
+				</div>
 			</div>
-		</div>
-		<div class="row container-contacto">
-			<div class="col-xs-12 col-sm-6">
-				<div class="contacto-form">
-					<h3>CONTANOS QUE TE QUERES HACER Y TE LO PRESUPUESTAMOS</h3>
-					<form class="form">
-						<div class="form-group">
-							<label class="col-xs-12 col-sm-6"></label>
-							<input type="text" class="form-control" placeholder="NOMBRE & APELLIDO">
+			<div class="row container-contacto">
+				<div class="col-xs-12 col-sm-6">
+					<div class="contacto-form">
+						<h3>CONTANOS QUE TE QUERES HACER Y TE LO PRESUPUESTAMOS</h3>
+						<form class="form">
+							<div class="form-group">
+								<label class="col-xs-12 col-sm-6"></label>
+								<input type="text" class="form-control" placeholder="NOMBRE & APELLIDO">
+							</div>
+							<div class="form-group">
+								<label class="col-xs-12 col-sm-6"></label>
+								<input type="eMail" class="form-control" placeholder="EMAIL">
+							</div>
+							<div class="form-group">
+								<label class="col-xs-12 col-sm-6"></label>
+								<input type="tel" class="form-control" placeholder="TELÉFONO / CELULAR">
+							</div>
+							<div class="form-group">
+								<label class="col-xs-12 col-sm-6"></label>
+								<input type="text" class="form-control" placeholder="QUE TE QUERES HACER?">
+							</div>
+							<button type="submit" class="btn btn-default">ENVIAR</button>
+						</form>
+						<h3>BOND STREET</h3>
+						<div class="direccion">
+							<p><i class="ion-location" aria-hidden="true"></i> AV. SANTA FE 1670, LOCAL 7, CAPITAL FEDERAL.</p>
+							<p><i class="ion-ios-telephone" aria-hidden="true"></i> 4813 4509 / 815 7032</p>
+							<p><i class="ion-ios-clock" aria-hidden="true"></i> LUNES A SÁBADOS DE 11 A 20 HS.</p>
 						</div>
-						<div class="form-group">
-							<label class="col-xs-12 col-sm-6"></label>
-							<input type="eMail" class="form-control" placeholder="EMAIL">
-						</div>
-						<div class="form-group">
-							<label class="col-xs-12 col-sm-6"></label>
-							<input type="tel" class="form-control" placeholder="TELÉFONO / CELULAR">
-						</div>
-						<div class="form-group">
-							<label class="col-xs-12 col-sm-6"></label>
-							<input type="text" class="form-control" placeholder="QUE TE QUERES HACER?">
-						</div>
-						<button type="submit" class="btn btn-default">ENVIAR</button>
-					</form>
-					<h3>BOND STREET</h3>
-					<div class="direccion">
-						<p><i class="ion-location" aria-hidden="true"></i> AV. SANTA FE 1670, LOCAL 7, CAPITAL FEDERAL.</p>
-						<p><i class="ion-ios-telephone" aria-hidden="true"></i> 4813 4509 / 815 7032</p>
-						<p><i class="ion-ios-clock" aria-hidden="true"></i> LUNES A SÁBADOS DE 11 A 20 HS.</p>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 mapa">
+					<div class="map-box">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3322055428293!2d-58.39352168512324!3d-34.595760180461596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabe9001e3e5%3A0x216523eb0c8532dc!2sAv.+Santa+Fe+1670%2C+C1060ABP+CABA!5e0!3m2!1ses-419!2sar!4v1468881201810"></iframe>
 					</div>
 				</div>
 			</div>
-
-			<div class="col-xs-12 col-sm-6 mapa">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3322055428293!2d-58.39352168512324!3d-34.595760180461596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabe9001e3e5%3A0x216523eb0c8532dc!2sAv.+Santa+Fe+1670%2C+C1060ABP+CABA!5e0!3m2!1ses-419!2sar!4v1468881201810"
-								width="100%" height="790px" frameborder="0" style="border:0" allowfullscreen></iframe>
-			</div>
 		</div>
-
+	</div>
 		<!-- FOOTER -->
 
 		<footer id="footer">
